<resources>
    <string name="app_name">Hop-Around</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_btn">Create Account</string>

    <string name="API_key_1">AIzaSyCUFq-P_ICHn7pZhCXkZd8yB1wCr2ttEO8</string>

    <string name="by_creating">By creating an account, you are agreeing to our</string>
    <string name="terms_and_services">Terms and Services</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

    Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.</string>
    <string name="send_pass_btn">Send Password Reminder</string>
    <string name="display_name">Display Name</string>
    <string name="next">Next</string>
    <string name="continue_btn">Continue</string>
    <string name="map">Map</string>
    <string name="my_collection">My Collection</string>
    <string name="daily_page">Daily page</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="hop_points">Hop Points</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="hop_points_profile">Hop Points:</string>
    <string name="hop_points_number">0</string>
    <string name="collection_on_profile">\'s Recently Collected</string>
    <string name="filler">filler filler filler filler</string>

</resources>
