<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/edit_profile_description_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/hop_points"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/profile_description"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="155dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/display_name"
        android:textSize="18sp" />


    <ImageButton
        android:id="@+id/edit_display_name_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/profile_photo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/profile_display_name"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/hop_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_display_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:text="@string/hop_points_profile" />

    <TextView
        android:id="@+id/profile_points_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_display_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="163dp"
        android:layout_toEndOf="@+id/hop_points"
        android:text="@string/hop_points_number" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="301dp"
        android:layout_height="185dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="275dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/lorem_ipsum" />

</RelativeLayout>