<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:gravity="center"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:editable="true"
        android:maxLength="15"
        android:text="@string/display_name"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/disp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_display_name"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/hop_points_profile" />

    <TextView
        android:id="@+id/profile_points_number"
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/disp"
        android:layout_alignBottom="@+id/disp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/disp"
        android:text="" />

    <EditText
        android:id="@+id/profile_description"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_below="@+id/disp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:maxLength="150"
        android:text="@string/filler" />

    <TextView
        android:id="@+id/display_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/collection_profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/display_name"
        android:textSize="18sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/collection_profile"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_popup_1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"

            app:srcCompat="@android:drawable/ic_menu_camera" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_popup_2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_camera"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_popup_3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_camera"
            />

    </LinearLayout>

</RelativeLayout>